# valura-assignment

./: .env.example  .gitignore  README.md  demo.html  pyproject.toml
src/: __init__.py  main.py
src/agents/: base.py  portfolio.py
src/api/: routes.py
src/core/: classifier.py  router.py  safety.py
src/models/: __init__.py
src/services/: market_data.py
tests/: test_classifier.py  test_portfolio.py  test_router.py  test_safety.py
